fix logo in footer not aligning properly on landscape mobile views. Other minor visual tweaks.

--- a/app/assets/stylesheets/pages/_farms.scss
+++ b/app/assets/stylesheets/pages/_farms.scss
@@ -85,6 +85,7 @@
 }
 
 .farm-img {
+  border-radius: 0.225rem;
   @include media-breakpoint-up(md) {
     max-width: 250px;
     margin-bottom: 1rem;
@@ -109,7 +110,10 @@
 }
 
 .farms-copy-text {
-  padding-bottom: 1rem;
+  padding-bottom: 0;
+  @include media-breakpoint-up(md) {
+    padding-bottom: 1rem;
+  }
 }
 
 .farms-copy-text-h {
@@ -120,7 +124,7 @@
 .farms-hr {
   margin: 6rem auto;
   border-top: solid 1px #444;
-  width: 80%;
+  width: 50%;
   @include media-breakpoint-up(md) {
     width: 60%;
   }
