--- a/app/assets/stylesheets/static_elements/_footer.scss
+++ b/app/assets/stylesheets/static_elements/_footer.scss
@@ -14,7 +14,6 @@
     padding: 0;
   }
   .footer-logo-wrap {
-    // background-color: transparentize($brand-primary, 0.5);
     display: flex;
     flex-flow: row wrap;
     width: 100%;
@@ -26,7 +25,9 @@
     order: 2;
     box-sizing: border-box;
     padding: 0 2rem 4rem 2rem;
+    margin: 0 auto;
     @include media-breakpoint-up(md) {
+      margin: 0;
       order: 1;
       width: 50%;
       padding: 4rem 2rem;
